fixed extra space in scroller

--- a/styles/03-components.css
+++ b/styles/03-components.css
@@ -301,6 +301,7 @@
   display: grid;
   gap: var(--space-3);
   margin-top: var(--space-6);
+  margin-right: 30px;
 }
 
 .grid--services {
